name:                typed-db
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/typed-db#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, DatabaseConnection
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , network
                     , network-uri
                     , postgresql-typed
                     , resource-pool
                     , servant-server
                     , tuple
                     , utf8-string
                     , wai
                     , warp
  default-language:    Haskell2010

executable typed-db-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , typed-db
  default-language:    Haskell2010

test-suite typed-db-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typed-db
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , postgresql-typed
                     , process
                     , resource-pool
                     , servant-server
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/typed-db
